--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.8",
   "description": "A library for making plots based off of principae",
   "bin": "bin/cmd.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest --forceExit",
     "build": "tsc",
