--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/cmd.js",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --forceExit",
+    "test": "jest --forceExit --detectOpenHandles",
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
