switch from tslint to eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,8 @@
     "outDir": "lib",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "node_modules/*"
-      ]
+      "*": ["node_modules/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
