--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "jest --forceExit --detectOpenHandles",
     "build": "tsc && node resources/gen_style.js > resources/princ_style.css",
     "watch": "tsc -w",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "format": "prettier --write resources/gen_style.js 'src/*.ts' 'test/*.ts'",
+    "lint": "prettier --check 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json,css}' package.json tsconfig.json .eslintrc.json && eslint src test --ext .ts",
+    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json,css}' package.json tsconfig.json .eslintrc.json",
     "docs": "typedoc --out docs src"
   },
   "repository": {
@@ -38,10 +38,14 @@
     "@types/jsdom": "16.2.5",
     "@types/node": "^14.14.10",
     "@types/yargs": "^15.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
-    "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.1.2"
   },
