--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "jest --forceExit --detectOpenHandles",
     "build": "tsc && node resources/gen_style.js > resources/princ_style.css",
     "watch": "tsc -w",
-    "lint": "prettier --check 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json,css}' package.json tsconfig.json .eslintrc.json && eslint src test --ext .ts",
-    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json,css}' package.json tsconfig.json .eslintrc.json",
+    "lint": "prettier --check 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json}' package.json tsconfig.json .eslintrc.json && eslint src test --ext .ts",
+    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts' 'resources/**/*.{js,json}' package.json tsconfig.json .eslintrc.json",
     "docs": "typedoc --out docs src"
   },
   "repository": {
